--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ dependencies = [
     "pydantic-settings>=2.0",
     "python-dotenv>=1.0",
     "eth-account>=0.13.0",
+    "rapidfuzz>=3.0",
+    "cryptography>=42.0",
 ]
 
 [project.optional-dependencies]
@@ -25,8 +27,8 @@ dev = [
 testpaths = ["tests"]
 asyncio_mode = "auto"
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pytest>=8.0",
     "pytest-asyncio>=0.24.0",
     "pytest-cov>=5.0",
